features and fixes: tcp filtering, scroll jumping, etc.
- prometheus filter
- remote-node filter
- drop reason in sidebar
- tcp flags local filtering
- flows table columns sizes improved
- local filtering fixing (scroll jumping and others)

--- a/src/components/InputElements/FlowsFilterInput.scss
+++ b/src/components/InputElements/FlowsFilterInput.scss
@@ -98,7 +98,10 @@
       display: block;
     }
 
-    .kind,
+    .kind {
+      color: #3b3c42;
+    }
+
     .query {
       color: #595a63;
     }
@@ -109,6 +112,7 @@
     }
 
     .separator {
+      margin: 0 2px;
       color: #999;
     }
   }
